service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: static
  name: fruits
spec:
  selector:
    app: fruits
  ports:
  - port: 80
    targetPort: 80
